finishing login controller routes
